@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2006,v 1.391 2006/06/01 14:43:19 markd Exp $
+$NetBSD: CHANGES-2006,v 1.392 2006/06/01 18:00:59 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -2867,3 +2867,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated x11/kde3-i18n-zh_TW to 3.5.3 [markd 2006-06-01]
 	Updated devel/kdevelop-base to 3.3.3 [markd 2006-06-01]
 	Updated devel/kdevelop to 3.3.3 [markd 2006-06-01]
+	Updated www/php-eaccelerator to 0.9.5beta2 [jlam 2006-06-01]
